// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<li
  className="mv2 tc ttu tracked"
>
  <a
    className="f5 fw4 pointer no-underline br3 br--left ba bw1 ph3 pv2 mb2 grow tc dib w-75"
  />
  <a
    className="f5 fw4 pointer no-underline br3 br--right ba bw1 pv2 ml1 mb2 grow tc dib w-20"
    onClick={[Function]}
  >
    QR
  </a>
</li>
`;

exports[`component - layout should render with props 1`] = `
<li
  className="mv2 tc ttu tracked"
>
  <a
    className="f5 fw4 pointer no-underline br3 br--left ba bw1 ph3 pv2 mb2 grow tc dib w-75"
    href="https://www.uglytarantula.com"
  >
    Ugly Tarantula
  </a>
  <a
    className="f5 fw4 pointer no-underline br3 br--right ba bw1 pv2 ml1 mb2 grow tc dib w-20"
    onClick={[Function]}
  >
    QR
  </a>
</li>
`;
